--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.battlechunk</groupId>
-    <artifactId>Practice</artifactId>
+    <artifactId>BattlePractice</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
